@@ -1,4 +1,9 @@
 2009-06-14 Suzana Matos <suzana.matos@gmail.com>
+* The client can sign up for his own
+	- TODO: the main page
+* Fixed autorize of tipos_apartamentos
+
+2009-06-14 Suzana Matos <suzana.matos@gmail.com>
 * Fixed reservas for cliente
 
 2009-06-14 Iuri Fernandes <iurifq@gmail.com>
